--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>GitHub user shepherd-t</title>
   </head>
   <body>
-
+    <h1>Hello, Code School!.</h1>
+    <ul>
+      <li>Responsive Design</li>
+      <li>Mobile Development</li>
+      <li>Web Animations</li>
+      <li>Laravel</li>
+    </ul>
   </body>
 </html>
