--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GitHub user shepherd-t</title>
   </head>
   <body>
-    <h1>Hello, Code School!.</h1>
+    <h1>Hello, Code School!</h1>
     <ul>
       <li>Responsive Design</li>
       <li>Mobile Development</li>
